# Vigilq

./: .env.example  LICENSE  README.md  docker-compose.yml  plan.md
.github/workflows/: publish.yml
autoscaler/: package.json  pnpm-lock.yaml  pools.config.example.yaml  tsconfig.json
autoscaler/src/: config.test.ts  config.ts  decision.test.ts  decision.ts  dockerScaler.ts  engineClient.test.ts  engineClient.ts  index.ts  pendingCount.test.ts
dashboard/: .npmrc  next.config.ts  package.json
dashboard/app/: NavBar.tsx  globals.css  layout.tsx  page.tsx
dashboard/app/dead-letter/: page.tsx
dashboard/app/jobs/: page.tsx
dashboard/lib/: ApiKeyProvider.tsx  StatusPill.tsx  api.ts  types.ts
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md
docs/docs/advanced/: _category_.json  autoscaling.md  pools.md
docs/docs/guides/: local-vs-production.md
docs/docs/reference/: api.md  dashboard.md  environment-variables.md
docs/docs/sdks/: _category_.json  csharp.md  python.md  typescript.md
docs/src/css/: custom.css
engine/: .env.example  .npmrc  Dockerfile  package.json  pnpm-lock.yaml
engine/migrations/: 1751500000000_initial-schema.sql
engine/src/: adaptive-demo.ts  adaptiveBackoff.ts  apiKey.ts  db.ts  demo.ts  index.ts  migrate.ts  queue.ts  rotate-key.ts  server.ts  sweep.ts  tenant.ts  triage-factory-test.ts
sdks/csharp/: .gitignore  Job.cs  JobQueueClient.cs  VigilQClient.csproj
sdks/python/: demo.py  pyproject.toml
sdks/python/vigilq_client/: __init__.py  client.py
sdks/typescript/: README.md  package.json
(+11 files in other folders)
