[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilq-client"
version = "0.1.0"
description = "Python client SDK for VigilQ, the self-hosted distributed job queue."
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[tool.setuptools.packages.find]
include = ["vigilq_client*"]
